--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -109,7 +109,7 @@ a {
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
-  background-image: url("assets/img/background.png");
+  background-image: url("https://github.com/hitz-zentroa/shared-task-critical-questions-generation/blob/main/assets/img/background.png");
   background-size: 100% auto;
 
   @include large {
