--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,6 +12,7 @@ $section-headings-color: #159957 !default;
 $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
+$body-bg-color: #ebfdfd !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
