--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,11 +8,11 @@ $header-bg-color: #155799 !default;
 $header-bg-color-secondary: #8b0000 !default;
 
 // Text
-$section-headings-color: #159957 !default;
+$section-headings-color: #8b0000 !default;
 $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
-$body-bg-color: #ebfdfd !default;
+$body-bg-color: #FFFFFF !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
